# AMI-UX

./: .gitignore  .gitmodules  .pre-commit-config.unix.yaml  .pre-commit-config.win.yaml  .pre-commit-config.yaml  CLAUDE.md  CODE_EXCEPTIONS.md  FALLBACK-ELIMINATION-PLAN.md  FALLBACK-ELIMINATION-REVISED.md  FALLBACK-REMEDIATION-SUMMARY.md  FIXME.md  REPORT-FALLBACKS.md  REQUIREMENTS.md  SETUP_CONTRACT.md  SPEC-META.md  STUPID_SHIT.md  TODO-META.md  TODO-MYPY.md  TODO.md  agent.sh  landing.html  module_setup.py  mypy.ini  pyproject.toml  pytest.ini  requirements-test.txt  ruff.toml  server.py
.claude/: settings.local.json
auth/: README.md  package.json  tsconfig.json
auth/src/: client.ts  config.ts  dataops-client.ts  env.ts  errors.ts  index.ts  middleware.ts  next-auth.d.ts  security-logger.ts  server.ts  types.ts
cms/: .eslintrc.json  .gitignore  AUDIT-LIBRARY-DISCRIMINATION.md  AUDIT-MESSAGE-DISCRIMINATION.md  README.md  SPEC-PORTAL.md  TODO.md  eslint.config.mjs  middleware.ts  next.config.js  package-lock.json  package.json  server.py  tsconfig.json  tsconfig.tsbuildinfo  view-source_https___independentailabs.com.html
cms/app/: icon.tsx  layout.tsx
cms/docs/: CMS-UI-Standardization.md  spec.md
cms/public/: doc.html  index.html
cms/scripts/: README-px-to-rem.md  build-highlight-core.mjs  build-highlight-engine.mjs  dev-single.mjs  find-px-dimensions.sh  generate-cert.mjs  health.mjs  px-dimensions-report.txt  px-summary.sh  px-to-rem.py  px-to-rem.sh  runner.mjs  server.mjs  server.sh  sync-highlight-extension.mjs  validate-ui.mjs
cms/tests/: auth-guest.test.ts  latex.integration.test.ts  text-formats.test.ts  upload.integration.test.ts
research/: SCHEMA_DRIVEN_UI_CONCEPT.md  SCHEMA_UI_COMPONENT_CATALOG.md  SCHEMA_UI_ENTERPRISE_RESEARCH.md
scripts/: ami_path.py  check_banned_words.py  count_fallback.py  run_tests.py
tests/: test_initial.py
ui-concept/: .gitignore  BLEND_MODE_BACKDROP_FILTER_INCOMPATIBILITY.md  CLAUDE.md  COMMIT_MESSAGE_2.txt  README.md  TEMP_COMMIT_MESSAGE.txt  package-lock.json  package.json  restart-dev.bat  start-dev-simple.bat  start-dev.bat  start-server.js  stop-dev.bat  stop-server.js
(+190 files in other folders)
